--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,7 +2,6 @@
   background-image: url("/header.png");
   width: 100vw;
   height: 100vh;
-  background-size: 100% 100%;
-  //background-position: center;
+  background-position: center;
   background-repeat: no-repeat;
 }
